--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "clarifai": "^2.9.0",
     "react": "^16.7.0",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.7.0",
